--- a/info.yaml
+++ b/info.yaml
@@ -5,7 +5,8 @@ project:
 
 # If using an HDL, set wokwi_id as 0 and uncomment and list your source files here. 
 # Source files must be in ./src and you must list each source file separately
-#  source_files:        
+  source_files:
+     - tt_um_chip_rom.v
 #    - counter.v
 #    - decoder.v
   top_module:  "tt_um_chip_rom"      # Put the name of your top module here, must start with "tt_um_". Make it unique by including your github username
