--- a/info.yaml
+++ b/info.yaml
@@ -25,7 +25,7 @@ documentation:
   author:       "gss"      # Your name
   title:        "test"      # Project title
   language:     "Wokwi" # other examples include Verilog, Amaranth, VHDL, etc
-  description:  ""      # Short description of what your project does
+  description:  "test"      # Short description of what your project does
 
 # Longer description of how the project works. You can use standard markdown format.
   how_it_works: |
